--- a/TableViewNotifiction/Base.lproj/Main.storyboard
+++ b/TableViewNotifiction/Base.lproj/Main.storyboard
@@ -1,24 +1,159 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="A73-XE-uzM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Master Table View Controller-->
+        <scene sceneID="3Dn-hS-zn5">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="KZb-Cs-N77" customClass="MasterTableViewController" customModule="TableViewNotifiction" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="KfJ-Vs-5cu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="lat-VZ-98B">
+                            <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="1" green="0.24888511699999999" blue="0.21211252529999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </view>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="a2R-lG-CRL">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="a2R-lG-CRL" id="vSH-nY-FaV">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="X1G-qD-NAm" kind="show" id="jGN-pG-2wc"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="KZb-Cs-N77" id="elZ-9c-5DQ"/>
+                            <outlet property="delegate" destination="KZb-Cs-N77" id="Gwg-Hw-oRi"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="Qvf-d1-ziv">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="tQv-vv-qCz">
+                            <connections>
+                                <segue destination="X1G-qD-NAm" kind="show" id="NIQ-Q7-Ge3"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="footerView" destination="lat-VZ-98B" id="ip1-Ge-ZBe"/>
+                        <outlet property="noData" destination="78Y-u5-pBw" id="Y5g-Jv-vJH"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M6C-ga-y0W" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="78Y-u5-pBw">
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Data" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndC-DP-dcE">
+                            <rect key="frame" x="89" y="54" width="62.5" height="21"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="21" id="gra-D9-2UZ"/>
+                                <constraint firstAttribute="width" constant="62.5" id="yRx-7k-mzo"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.00055766400279999996" green="0.44662807640000002" blue="0.00086518439709999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstItem="ndC-DP-dcE" firstAttribute="centerY" secondItem="nU6-8r-7TW" secondAttribute="centerY" id="8d2-T9-cSX"/>
+                        <constraint firstItem="ndC-DP-dcE" firstAttribute="centerX" secondItem="nU6-8r-7TW" secondAttribute="centerX" id="o4Y-ma-DFC"/>
+                    </constraints>
+                    <viewLayoutGuide key="safeArea" id="nU6-8r-7TW"/>
+                </view>
             </objects>
+            <point key="canvasLocation" x="215" y="-182"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="tVR-cY-YB0">
+            <objects>
+                <viewController id="X1G-qD-NAm" customClass="DetailViewController" customModule="TableViewNotifiction" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="c02-7j-2Et">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="e2h-ql-eWn">
+                                <rect key="frame" x="0.0" y="299" width="375" height="133"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2j1-bJ-GXH">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="78.5"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xPh-IZ-zEG">
+                                        <rect key="frame" x="40" y="88.5" width="295" height="44.5"/>
+                                        <state key="normal" title="Done"/>
+                                        <connections>
+                                            <action selector="btnDone:" destination="X1G-qD-NAm" eventType="touchUpInside" id="dgq-ny-0eH"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="2j1-bJ-GXH" firstAttribute="top" secondItem="e2h-ql-eWn" secondAttribute="top" id="Dte-RL-aYt"/>
+                                    <constraint firstItem="2j1-bJ-GXH" firstAttribute="height" secondItem="e2h-ql-eWn" secondAttribute="height" multiplier="1/2" id="FEQ-O4-p8D"/>
+                                    <constraint firstItem="2j1-bJ-GXH" firstAttribute="leading" secondItem="e2h-ql-eWn" secondAttribute="leading" id="JPa-hF-7ZL"/>
+                                    <constraint firstItem="xPh-IZ-zEG" firstAttribute="height" secondItem="e2h-ql-eWn" secondAttribute="height" multiplier="1/3" id="Mnk-5w-gLU"/>
+                                    <constraint firstAttribute="bottom" secondItem="xPh-IZ-zEG" secondAttribute="bottom" id="cXA-A4-ZJD"/>
+                                    <constraint firstItem="xPh-IZ-zEG" firstAttribute="leading" secondItem="e2h-ql-eWn" secondAttribute="leading" constant="40" id="vmC-qf-54k"/>
+                                    <constraint firstAttribute="trailing" secondItem="2j1-bJ-GXH" secondAttribute="trailing" id="xvP-f8-Szr"/>
+                                    <constraint firstAttribute="trailing" secondItem="xPh-IZ-zEG" secondAttribute="trailing" constant="40" id="zSH-rE-KNb"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="e2h-ql-eWn" firstAttribute="height" secondItem="c02-7j-2Et" secondAttribute="height" multiplier="1/5" id="Skn-gV-ynJ"/>
+                            <constraint firstItem="e2h-ql-eWn" firstAttribute="centerX" secondItem="ixy-1k-0ni" secondAttribute="centerX" id="ZgF-F0-TxT"/>
+                            <constraint firstItem="e2h-ql-eWn" firstAttribute="centerY" secondItem="ixy-1k-0ni" secondAttribute="centerY" id="jAU-xK-g6L"/>
+                            <constraint firstItem="e2h-ql-eWn" firstAttribute="width" secondItem="c02-7j-2Et" secondAttribute="width" id="xri-v6-WVL"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ixy-1k-0ni"/>
+                    </view>
+                    <connections>
+                        <outlet property="txtData" destination="2j1-bJ-GXH" id="xml-Uo-m08"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GFH-gB-Lju" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="966" y="-182"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2Up-tF-IXT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="A73-XE-uzM" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EKW-rP-cmV">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="KZb-Cs-N77" kind="relationship" relationship="rootViewController" id="9VH-qt-7bp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VfP-vh-N5c" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-673" y="-182"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="jGN-pG-2wc"/>
+    </inferredMetricsTieBreakers>
 </document>
